{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 186,
  "lineage": "5016c2f2-8caf-f2da-f6a8-86a664d4d11f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api-gateway-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05b0cc5a6b1420137",
            "domain": "vpc",
            "id": "eipalloc-060a57b998c4d89ff",
            "instance": "i-05c5d4e2c96b3fdc2",
            "network_interface": "eni-05b7cb2084d846224",
            "private_dns": "ip-10-0-0-243.ca-central-1.compute.internal",
            "private_ip": "10.0.0.243",
            "public_dns": "ec2-52-60-168-69.ca-central-1.compute.amazonaws.com",
            "public_ip": "52.60.168.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.braindrip-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.braindrip-subnet-public",
            "aws_vpc.braindrip",
            "module.api-gateway-codedeploy.aws_iam_instance_profile.ec2",
            "module.api-gateway-codedeploy.aws_iam_role.ec2",
            "module.api-gateway.aws_instance.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "braindrip-backend-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-093e23b8604215762",
            "domain": "vpc",
            "id": "eipalloc-03c278ecc2e4168ae",
            "instance": "i-05fb6f0657805b197",
            "network_interface": "eni-0a4eba391fc0cccd0",
            "private_dns": "ip-10-0-1-6.ca-central-1.compute.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-3-96-32-244.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.32.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.braindrip-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-internal-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.braindrip-subnet-private-1",
            "aws_vpc.braindrip",
            "module.braindrip-backend-codedeploy.aws_iam_instance_profile.ec2",
            "module.braindrip-backend-codedeploy.aws_iam_role.ec2",
            "module.braindrip-backend.aws_instance.default"
          ]
        }
      ]
    },
    {
      "module": "module.api-gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054362537f5132ce2",
            "arn": "arn:aws:ec2:ca-central-1:467511520697:instance/i-05c5d4e2c96b3fdc2",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "api-gateway-ec2",
            "id": "i-05c5d4e2c96b3fdc2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "braindrip-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b7cb2084d846224",
            "private_dns": "ip-10-0-0-243.ca-central-1.compute.internal",
            "private_ip": "10.0.0.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be3e9ee343868435",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0daabec4d24d4f59b",
            "tags": {
              "Name": "api-gateway"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c333032b256d783",
              "sg-0360f85bc535ad97e",
              "sg-0b812fa37a07bc3a4"
            ]
          },
          "dependencies": [
            "aws_key_pair.braindrip-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.braindrip-subnet-public",
            "aws_vpc.braindrip",
            "module.api-gateway-codedeploy.aws_iam_instance_profile.ec2",
            "module.api-gateway-codedeploy.aws_iam_role.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.braindrip-backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054362537f5132ce2",
            "arn": "arn:aws:ec2:ca-central-1:467511520697:instance/i-05fb6f0657805b197",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "braindrip-backend-ec2",
            "id": "i-05fb6f0657805b197",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "braindrip-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4eba391fc0cccd0",
            "private_dns": "ip-10-0-1-6.ca-central-1.compute.internal",
            "private_ip": "10.0.1.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a3879ebd0869f26d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03dbe2b0b71eb18f7",
            "tags": {
              "Name": "braindrip-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0360f85bc535ad97e",
              "sg-0b812fa37a07bc3a4",
              "sg-0ba98b4324fcfcac2"
            ]
          },
          "dependencies": [
            "aws_key_pair.braindrip-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-internal-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.braindrip-subnet-private-1",
            "aws_vpc.braindrip",
            "module.braindrip-backend-codedeploy.aws_iam_instance_profile.ec2",
            "module.braindrip-backend-codedeploy.aws_iam_role.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "braindrip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-081f34f301f2bb389",
            "owner_id": "467511520697",
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-051a642e0836ae294",
            "owner_id": "467511520697",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081f34f301f2bb389",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_internet_gateway.braindrip",
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "braindrip-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b8f567ca9cc85a7",
            "route_table_id": "rtb-051a642e0836ae294",
            "subnet_id": "subnet-03dbe2b0b71eb18f7"
          },
          "dependencies": [
            "aws_internet_gateway.braindrip",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.braindrip-subnet-private-1",
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "braindrip-subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091de9b28b0a1c5a6",
            "route_table_id": "rtb-051a642e0836ae294",
            "subnet_id": "subnet-0daabec4d24d4f59b"
          },
          "dependencies": [
            "aws_internet_gateway.braindrip",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.braindrip-subnet-public",
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:security-group/sg-0b812fa37a07bc3a4",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b812fa37a07bc3a4",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": null,
            "owner_id": "467511520697",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:security-group/sg-01c333032b256d783",
            "description": "Allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-01c333032b256d783",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": null,
            "owner_id": "467511520697",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-internal-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:security-group/sg-0ba98b4324fcfcac2",
            "description": "Allow internal HTTP requests",
            "egress": [],
            "id": "sg-0ba98b4324fcfcac2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-internal-http",
            "name_prefix": null,
            "owner_id": "467511520697",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-internal-mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:security-group/sg-08b19ea7014c36c85",
            "description": "Allow internal MySQL requests",
            "egress": [],
            "id": "sg-08b19ea7014c36c85",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-internal-mysql",
            "name_prefix": null,
            "owner_id": "467511520697",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:security-group/sg-0360f85bc535ad97e",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0360f85bc535ad97e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "467511520697",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "braindrip-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:subnet/subnet-03dbe2b0b71eb18f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03dbe2b0b71eb18f7",
            "map_public_ip_on_launch": false,
            "owner_id": "467511520697",
            "tags": {
              "Name": "Brain Drip Subnet (Private 1)"
            },
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "braindrip-subnet-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:subnet/subnet-079a2200961bd8536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-079a2200961bd8536",
            "map_public_ip_on_launch": false,
            "owner_id": "467511520697",
            "tags": {
              "Name": "Brain Drip Subnet (Private 2)"
            },
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "braindrip-subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:subnet/subnet-0daabec4d24d4f59b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0daabec4d24d4f59b",
            "map_public_ip_on_launch": false,
            "owner_id": "467511520697",
            "tags": {
              "Name": "Brain Drip Subnet (Public)"
            },
            "vpc_id": "vpc-00413b55139b733e2"
          },
          "dependencies": [
            "aws_vpc.braindrip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "braindrip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:467511520697:vpc/vpc-00413b55139b733e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf922c4e6064e898",
            "default_route_table_id": "rtb-0be4c38a384f30231",
            "default_security_group_id": "sg-0606e2be3142feaf8",
            "dhcp_options_id": "dopt-981b36f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00413b55139b733e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be4c38a384f30231",
            "owner_id": "467511520697",
            "tags": {
              "Name": "Brain Drip VPC"
            }
          }
        }
      ]
    }
  ]
}